# rent-cars

./: .gitignore  docker-compose.yaml
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2ab317b4ec3f_init.py  2bf1f961605a_fix_cascading.py  65c81614cb6a_users.py  776f853d4900_users.py  87971a10b336_users.py  9f944341d5c4_fix_cascading.py  b83cd46ad6a6_fix_cascading.py  ce06f5a87a57_initial_tables.py  d5c50608a869_initial_tables.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: __init__.py  auth.py  auth_router.py  car.py  file.py  (+13 more)
backend/app/core/: app_factory.py  database.py  decorators.py  enums.py  exceptions.py  logging.py  permissions.py
backend/app/db/: enums.py  session.py
backend/app/middleware/: __init__.py  auth_middleware.py
backend/app/models/: __init__.py  car.py  user.py
backend/app/repositories/: car.py  car_repository.py  car_type.py  car_type_repository.py  favorite.py  favorite_repository.py  file.py  location.py  location_repository.py  rental.py  user.py  user_repository.py
backend/app/schemas/: auth.py  car.py  car_type.py  errors.py  favorite.py  file.py  location.py  oauth.py  rent_car.py  user.py  user_schemas.py
backend/app/services/: auth.py  auth_service.py  car.py  car_service.py  car_type.py  car_type_service.py  favorite.py  favorite_service.py  file.py  file_service.py  filter_service.py  location.py  location_service.py  oauth.py  rental.py  rental_service.py  user.py  user_service.py
backend/uploads/: 91bd29aa-f2f4-4e3f-9067-4b2b24da48fe.tiff
(+237 files in other folders)
