[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["hojiakbar2806 <hojiakbarnasriddinov2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
aiosqlite = "^0.21.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
pyjwt = "^2.10.1"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
argon2-cffi = "^23.1.0"
cryptography = "^44.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
